--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,3 +1,9 @@
+repositories {
+    maven {
+        url 'https://dl.bintray.com/tolstykh/rich-compound-drawable/'
+    }
+}
+
 apply plugin: 'com.android.application'
 
 android {
@@ -23,5 +29,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile project(':library')
+    compile 'com.tolstykh.textviewrichdrawable:textview-rich-drawable:0.1.0'
 }
