--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -14,6 +14,8 @@ android {
         targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
         versionName "1.0"
+
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
