Update demo to show other controls (Button, CheckBox, EditText, RadioButton)

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,5 +27,6 @@ android {
 
 dependencies {
     compile "com.android.support:appcompat-v7:$rootProject.supportVersion"
-    compile 'com.tolstykh.textviewrichdrawable:textview-rich-drawable:0.2.1'
+    compile "com.android.support:design:$rootProject.supportVersion"
+    compile 'com.tolstykh.textviewrichdrawable:textview-rich-drawable:0.3.0'
 }
