--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -6,7 +6,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.compileSdkVersion
-    buildToolsVersion rootProject.buildToolsVersion
 
     defaultConfig {
         applicationId "com.tolstykh.textviewrichdrawable"
@@ -26,7 +25,8 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:$rootProject.supportVersion"
-    compile "com.android.support:design:$rootProject.supportVersion"
-    compile 'com.tolstykh.textviewrichdrawable:textview-rich-drawable:0.3.2'
+    implementation "com.android.support:appcompat-v7:$rootProject.supportVersion"
+    implementation "com.android.support:design:$rootProject.supportVersion"
+//    implementation 'com.tolstykh.textviewrichdrawable:textview-rich-drawable:0.3.2'
+    implementation project(path: ':library')
 }
