--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,7 +1,3 @@
-repositories {
-    jcenter()
-}
-
 apply plugin: 'com.android.application'
 
 android {
@@ -26,7 +22,7 @@ android {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:$rootProject.supportVersion"
-    compile "com.android.support:design:$rootProject.supportVersion"
-    compile 'com.tolstykh.textviewrichdrawable:textview-rich-drawable:0.3.2'
+    implementation "androidx.appcompat:appcompat:$rootProject.appcompatVersion"
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation project(':library')
 }
